--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "For access to cas quickly and simple",
     "type": "library",
     "require": {
-        "apereo/phpcas": "^1.3@dev",
-        "laravel/framework": "5.3+"
+        "apereo/phpcas": "^1.3",
+        "laravel/framework": "5.*"
     },
     "license": "MIT License",
     "authors": [
